--- a/estilos.css
+++ b/estilos.css
@@ -8,6 +8,10 @@ body {  /* Ponemos el mismo fondo en todas las ventanas */
 	background-attachment: fixed;
 	background-size: cover;
 }
+section{
+	height: 10%;
+	width: 100%;
+}
 a{ /* Color predeterminado para etiquetas "a" */
 	color: #040a41;
 }
@@ -18,8 +22,9 @@ a:link { /* Vínculos */
 a:hover {    /* indica el estilo cuando el cursor está sobre el elemento */ 
 	color: #b92929;
 }
-.menunav {    /* estilo para el menu de navegación */ 
-	width: 800px;  
+.menu {    /* estilo para el menu de navegación */ 
+	position:relative;
+	width: 900px;  
 	margin: auto;
 }
 .botonMenu {      /* estilo para cada botón del menu de navegación */ 
@@ -45,12 +50,64 @@ a:hover {    /* indica el estilo cuando el cursor está sobre el elemento */
 	background-image: none;	
 	background-color: #cabb33;
 	cursor:pointer;
+} 
+/* elementos del menu desplegable*/
+#btn-menu {
+    display: none;   /* oculta el checkbox cuando no es necesario*/
+} 
+header {
+    width: 100%;
+	z-index: 10;	/* coloca el checkbox por encima del contenido*/
+} 
+header label {     /* coloca el checkbox en un lugar y tamaño exactos*/
+    display: none;
+    width: 30px;
+    height: 30px;
+    position: absolute;
+    left: 20px;
+    top: 30px;
+} 
+header label:hover {
+    cursor: pointer;    /* cambia el cursor sobre el checkbox para indicar la interacción*/
+}
+    .menu ul{
+    margin-left: 20px; 
+    list-style: none;     /* para evitar los bullit list en la lista*/
+    padding: 0;
+    display: flex;
+}
+    .menu li{
+    background-image: url(../imagenes/boton1.jpg);
+    background-repeat: no-repeat; /* evita que se repita la imagen aunque cambie el tamaño*/
+    width: 160px;
+    height: 30px;
+    font-size: 14px;
+	text-align: center;
+    color: #666666;
+    text-decoration: none; 
+    margin-bottom: 10px;
+} 
+    .menu li a {
+    display: block;
+    font-family: Ancizar Sans-regular;
+    text-align: center;
+    color: #666666;
+    text-decoration: none;    
+    padding-top:6px;    
+}
+    .menu li a:hover , .menu li a:active{
+    color:#FFFFFF;
+	text-shadow: 1px 1px #000000;	
+	background-image: url(../imagenes/boton2.jpg);
+    background-repeat: no-repeat;
+    height: 30px;
+    padding-top:6px;
 }   
 h1{     /* estilo para los titulares */ 
 	color: #cabb33; 
 	text-align: center;
 	font-family: 'New Tegomin', serif; /* Fuentes de Google */
-	font-size: 200px; 
+	font-size: 900%; 
 	font-weight: normal; 
 	line-height: 10px; 
 	margin: auto;
@@ -62,20 +119,22 @@ h1:link {
 }
 h2 {
 	color: #cabb33; 
-	padding: 1em 5px 1px 5px;
+	padding: 10px 5px 1px 5px;
 	text-align: center;
 	font-family: 'Neucha', cursive;; /* Fuentes de Google */
-	font-size: 40px; 
+	font-size: 200%; 
 	font-weight: normal; 
 	line-height: 50px; 
 	margin: auto;
 }
 h3 {
+	position:relative;
+	text-align: center;
 	color: #cabb33; 
 	padding: 1em 7em;
-	text-align: left;
+	text-align: center;
 	font-family: 'Neucha', cursive; /* Fuentes de Google */
-	font-size: 40px; 
+	font-size: 200%; 
 	font-weight: normal; 
 	line-height: 50px; 
 	margin: auto;
@@ -84,7 +143,7 @@ h4 {
 	color: #292611; 
 	text-align: center;
 	font-family: 'Neucha', cursive; /* Fuentes de Google */
-	font-size: 30px; 
+	font-size: 180%; 
 	font-weight: normal; 
 	line-height: 50px; 
 	margin: auto;
@@ -93,9 +152,9 @@ h5 {
 	color: #292611; 
 	text-align: center;
 	font-family: 'Neucha', cursive; /* Fuentes de Google */
-	font-size: 30px; 
+	font-size: 180%; 
 	font-weight: normal; 
-	line-height: 270px; 
+	line-height: 60px; 
 	margin: auto;
 }
 .volver{ /* Para el botón de volver al inicio */
@@ -144,11 +203,11 @@ h5 {
 	padding: 1em 3px 1px 5px;
 	position:relative;
 	text-align: justify;
-	width:500px;
+	width: 100%;
 	height: 55vh;
 	margin:auto;  /* margen igual a izquierda y derecha */
 	font-family: 'Open Sans Condensed', sans-serif;  /* Fuentes de Google */
-	font-size: 28px;
+	font-size: 124%;
 	font-weight: normal;
 	color:#000000;
 }
@@ -156,38 +215,43 @@ h5 {
 	padding: 1em 3px 1px 5px;
 	position:relative;
 	text-align: justify;
-	width:500px;
+	width:100%;
 	height: 55vh;
-	margin:auto;  /* margen igual a izquierda y derecha */
+	margin: 0;  /* margen igual a izquierda y derecha */
 	font-family: 'Open Sans Condensed', sans-serif;  
-	font-size: 28px;
+	font-size: 130%;
 	font-weight: normal;
 	color:#ffffff;
 }
 .texto_figura{ /* Estilo para los párrafos de abajo de las imagenes */
 	position: relative;
-	max-width:600px;
+	max-width:100%;
 	margin:auto;  /* margen igual a izquierda y derecha */
 	font-family: 'Open Sans Condensed', sans-serif;  /* Fuentes de Google */
-	font-size: 15px;
+	font-size: 20px;
 	font-weight: normal;
 	text-align:center;
 	color:#000000;
 }
 img{ /* Estilo para las imágenes */
-	padding: 4em 3px 10px 5px;
-	margin:auto;
+	padding: 1em 3px 10px 1em;
 	position: relative;
 	align-self:auto;
 	display:block;
 }
+.imgcheckbox{
+	padding: 0%;
+
+}
 .container { /* Contenedor para la transición de texto sobre imagen */
 	position: relative;
 	width: 100%;
+	height: 80%;
+	padding: 10em 0px 0px 0px;
+	margin: 0;
   }
 .image { /* Hacer la imagen responsive */
-	width: 100%;
-	height: auto;
+	width: 90%;
 }
 .overlay { /* Estilo para la animación del contenedor que aparece sobre la imagen */
 	position: absolute;
@@ -201,7 +265,7 @@ img{ /* Estilo para las imágenes */
 	transform: scale(0);
 	transition: .3s ease; /* Tiempo de duración de la transición */
 }
-.container:hover .overlay {/* Realizar el efecto overlay al pasar el mouse sobre la imagen */
+.container:hover .overlay, .container:active .overlay {/* Realizar el efecto overlay al pasar el mouse sobre la imagen */
 	transform: scale(1);
 }
 .text { /* Estilo para el div del texto dentro del contenedor */
@@ -213,83 +277,225 @@ img{ /* Estilo para las imágenes */
 	transform: translate(-50%, -50%);
 	text-align: center;
 }
-.linea-tiempo {/* Para crear la linea de tiempo se aplica un ancho de 500px, con un max-width de 95vw. */
-	padding-left: 400px;
+/*----------------------------------------------- linea de tiempo ----------------------------------------------------------------------------------*/
+.timeline{
+	margin-top: 40px;
+	margin-bottom: 40px;
 	position: relative;
-	width: 500px;
-	max-width: 95vw;
-	height: 100%;
-	font-family: Arial;
-} 
-.linea-tiempo::before { /* Se inserta contenido vacío que tiene un ancho de 3px, se posiciona al 50% del contenido y tiene fondo negro. */
+}
+.timeline:before{
 	content: '';
 	position: absolute;
-	width: 3px;
-	background-color: #000;
-	left: 72.25%;
+	left: 50%;
+	width: 2px;
 	height: 100%;
-	border-radius: 10px;
+	background: #6658ea
 }
-.momento { /* Se aplica un ancho del 45% para los momentos, se agrega un contenedor para el texto en forma de caja*/
+.content{
+	 border: #6658ea 1px solid; 
+	 padding: 20px; 
+	 border-radius: 
+	 20px; 
+	 color: royalblue;
+	 background-color: #508ca0;
+	}
+.timeline ul{ margin: 0; padding: 0}
+.timeline ul li{ 
+	list-style: none;
 	position: relative;
-	width: 45%;
+	width: 50%;
+	padding: 20px 40px;
 	box-sizing: border-box;
 }
-.momento:nth-child(even) { /*Se posicionan los momentos pares (es decir, el 2do, 4to, 6to momento) a la derecha.*/
-	left: 55%;
+
+.timeline ul li:nth-child(odd){
+	float: left;
+	text-align: right;
+	clear: both;
 }
-  
-.momento::after { /* Se inserta contenido vacío de ancho 20px y altura 20px, con radio de borde del 50%, creando un círculo. Tiene fondo negro y se posiciona a la derecha de .momento. en el centro.*/
+.timeline ul li:nth-child(odd)::before{
 	content: '';
 	position: absolute;
-	top: calc(50% + 10px);
-	right: calc(-11.11% - 11.5px);
-	height: 20px;
+	top: 40px;
+	right: -14px;
 	width: 20px;
-	background-color: #000;
-	border-radius: 50%;
+	height: 20px;
+	background: white;
+	border: 2px solid #6658ea;
+	border-radius: 50%
 }
-  
-.momento:nth-child(even)::after { /*  Se posiciona a la izquierda de .momento*/
-	left: calc(-11.11% - 8.5px);
-}
-  
-.momento h3 { /* Estilo para un h3 dentro del momento*/
-	margin: 10px 0px;
-	font-size: 30px;
-	text-align: center;
-}
-.momento .descripcion { /* Estilo para la descripción del momento*/
-	background-color: #cabb33;
-	font-family: 'Open Sans Condensed', sans-serif;
-	border-radius: 20px;
-	padding: 10px;
-	line-height: 32px;
-	font-size: 20px;
-} 
-.momento .descripcion::after { /* Se inserta contenido vacío a la derecha de .descripción y centrado */
+.timeline ul li:nth-child(odd)::after{
 	content: '';
 	position: absolute;
-	font-family: 'Open Sans Condensed', sans-serif; 
-	font-size: 40px;
-	right: -10px;
-	top: calc(50% + 10px);
-	height: 0;
+	border-style: solid;
 	width: 0;
-	border-top: 10px solid transparent;
-	border-bottom: 10px solid transparent;
-	border-left: 12px solid #cabb33;
+	height: 0;
+	top: 44px;
+	right: 25px;
+	border-width: 10px 0 10px 15px;
+	border-color: transparent transparent transparent #6658ea;
 }
-.momento:nth-child(even) .descripcion { /* A los momentos de la derecha, se les pone fondo celeste y letra blanca. */
-	background-color: #3393FE;
-	color: white;
-}  
-.momento:nth-child(even) .descripcion::after{ /* El contenido vacío, se coloca a la izquierda y de color celeste para los momentos de la derecha. */
+
+.timeline ul li:nth-child(even){
+	float: right;
+	text-align: left;
+	clear: both;
+}
+
+
+.timeline ul li:nth-child(even)::before{
+	content: '';
+	position: absolute;
+	top: 40px;
 	left: -10px;
-	border-top: 10px solid transparent;
-	border-bottom: 10px solid transparent;
-	border-right: 12px solid #3393FE;
-	font-family: 'Open Sans Condensed', sans-serif; 
-	font-size: 40px;
-	border-left: none;
+	width: 20px;
+	height: 20px;
+	background: white;
+	border: 2px solid #6658ea;
+	border-radius: 50%
+}
+.timeline ul li:nth-child(even)::after{
+	content: '';
+	position: absolute;
+	border-style: solid;
+	width: 0;
+	height: 0;
+	top: 44px;
+	left: 25px;
+	border-width: 10px 15px 10px 0px;
+	border-color: transparent #6658ea transparent transparent;
+}
+
+@media only screen and (max-width: 860px) {
+	a:hover , a:active{    /* indica el estilo cuando el cursor está sobre el elemento en computador y dispositivo móvil*/ 
+		color: #b92929;
+	}
+	.menu {    /* estilo para el menu de navegación */ 
+		width: 500px;  
+		margin: auto;
+	}
+
+	.parrafo_img { /* Estilo para los párrafos en los contenedores */ 
+		font-size: 100%;
+	}
+	.linea-tiempo::before { /* Se inserta contenido vacío que tiene un ancho de 3px, se posiciona al 50% del contenido y tiene fondo negro. */
+		left: calc(60% + 3%);
+	}
+	.timeline:before{
+		left: 0%;
+	}
+	.timeline ul li{ 
+		width: 100%;
+	}
+	.timeline ul li:nth-child(odd){
+		float: right;
+		text-align: left;
+	}
+	.timeline ul li:nth-child(odd)::before{
+		left: -10px;
+	}
+	.timeline ul li:nth-child(odd)::after{
+		left: 25px;
+		border-width: 10px 15px 10px 0px;
+		border-color: transparent #6658ea transparent transparent;
+	}
+	
+}
+
+@media only screen and (max-width: 640px) {
+	a:hover , a:active{    /* indica el estilo cuando el cursor está sobre el elemento en computador y dispositivo móvil*/ 
+		color: #b92929;
+	}
+
+	img{ /* Estilo para las imágenes */
+		padding: 1em 3px 10px 0px;
+		position: relative;
+		align-self:auto;
+		display:block;
+	}
+
+	h1{     /* estilo para los titulares */ 
+		color: #cabb33; 
+		text-align: center;
+		font-family: 'New Tegomin', serif; /* Fuentes de Google */
+		font-size: 500%; 
+		font-weight: normal; 
+		line-height: 10px; 
+		margin: auto;
+	}
+
+	header label{
+        display:block; /* se muestra el checkbox cuando se reduce la ventana*/
+    } 
+
+	.menu {
+        position:static;  /* sostiene la posición aunque se haga scroll en el contenido */
+        background: rgba(0.5, 0.5, 0.5, 0.2); /* rojo, verde, azul, alpha (transparencia) */
+		z-index: 30; /* para asegurar que el menu esta por encima de todo lo demás*/
+        width: 40%; /* se refiere al ancho del fondo del menu y no a los botones */
+        margin-left: -150%; /* se oculta porque se coloca por fuera de la ventana*/
+		margin-top: 4px;
+        transition: all 1s;   /* la animación de desplegar el menu dura 1 segundo*/
+    } 
+    .menu ul {
+        flex-direction: row;  /* se despliega en sentido vertical*/
+    } 
+    .menu li {
+    font-family: 'Open Sans Condensed', sans-serif; 
+    }
+
+	#btn-menu:checked ~ .menu {  /* el checkbox controla las dos posiciones del menu */
+        margin: 1px; 
+    }
+
+	.parrafo_izquierda { /* Estilo para los párrafos de la izquierda en pantalla dividida */
+		font-size: 100%;
+	}
+
+	#pantalla-dividida{ /* Permite poner un div al lado del otro */
+		display:grid;
+	}
+	.izquierda{ /* Parte izquierda al dividir la pantalla */
+		height: 100%;
+		width: 100%;
+		text-overflow: clip; 
+		position: relative;
+	}
+	.derecha{ /* Parte derecha al dividir la pantalla */
+		position:relative;
+		padding: 0px 0px;
+		background-size: cover;
+		background-position: center;
+		width: 100%;
+		height: 100%;
+	}
+
+	.parrafo_img { /* Estilo para los párrafos en los contenedores */ 
+		margin-top: 20%;
+		font-size: 70%;
+	}
+	.container { /* Contenedor para la transición de texto sobre imagen */
+		position: relative;
+		width: 100%;
+		height: 100%;
+	  }
+	  .timeline:before{
+		left: 0%;
+	}
+	.timeline ul li{ 
+		width: 100%;
+	}
+	.timeline ul li:nth-child(odd){
+		float: right;
+		text-align: left;
+	}
+	.timeline ul li:nth-child(odd)::before{
+		left: -10px;
+	}
+	.timeline ul li:nth-child(odd)::after{
+		left: 25px;
+		border-width: 10px 15px 10px 0px;
+		border-color: transparent #6658ea transparent transparent;
+	}
+	
 }
