--- a/estilos.css
+++ b/estilos.css
@@ -131,8 +131,6 @@ h3 {
 	position:relative;
 	text-align: center;
 	color: #cabb33; 
-	padding: 1em 7em;
-	text-align: center;
 	font-family: 'Neucha', cursive; /* Fuentes de Google */
 	font-size: 200%; 
 	font-weight: normal; 
@@ -182,6 +180,16 @@ h5 {
 	margin:auto;  /* margen igual a izquierda y derecha */
 	font-family: 'Open Sans Condensed', sans-serif;  
 	font-size: 20px;
+	font-weight: normal;
+	color:#000000;
+}
+.parrafo_ref { /* Estilo para los párrafos generales */
+	position:relative;
+	text-align: justify;
+	max-width:640px;
+	margin:auto;  /* margen igual a izquierda y derecha */
+	font-family: 'Open Sans Condensed', sans-serif;  
+	font-size: 100%;
 	font-weight: normal;
 	color:#000000;
 }
